Testing the Next.js

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,7 @@ jobs:
           key: ${{ secrets.MY_SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           port: 22
-          script: ls
+          script: cd cicd
+            git pull
+            npm run build
+            npm run start
