--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,9 @@ jobs:
           key: ${{ secrets.MY_SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           port: 22
-          script: cd cicd
+          script: |
+            cd cicd
             git pull
+            npm install
             npm run build
             npm run start
